--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "jquery": "^3.3.1",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1"
   },
@@ -21,6 +22,7 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-bootstrap-vue": "^0.1.0",
+    "vue-cli-plugin-ionic": "^1.0.0-alpha.0",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
