--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "ionic": "^4.9.0",
     "jquery": "^3.3.1",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1"
