--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "geolocation": "^0.2.0",
     "ionic": "^4.9.0",
     "jquery": "^3.3.1",
     "vue": "^2.5.21",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-animate": "^2.1.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.0.0-beta.53",
